<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sapa.signlanguage.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.sapa.signlanguage.view.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera">
        <!-- Aksi navigasi ke HomeFragment -->
        <action
            android:id="@+id/action_cameraFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.sapa.signlanguage.view.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>